# brok-bio-age

./: .dockerignore  .gitignore  DEPLOY.md  DESIGN.md  Dockerfile  PRIVACY.md  README.md  RELEASE-v0.2.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  pyproject.toml  render.yaml
api/: .env.example  __init__.py  constants.py  llm_providers.py  main.py  metrics.py  requirements.txt
brok_bioage/: __init__.py  brok.py  constants.py  levine.py  models.py  pace.py  units.py
data/: reference-phenoage.xlsx
deploy/: Caddyfile.example  kiron-buy-pock-proxy.example
docs/: $POCK_credit_reverse.md  CHAT_FAILOVER_2026-07-11.md  FARM_ANOMALY_ALERTS.md  Grok_Investor_Reconciliation_Handoff_Jul2026.md  HANDOFF-Jul2026.md  INCIDENT_SUPABASE_EMAIL_BOUNCES_2026-07-22.md  INCIDENT_TRIAL_FARM_KILL_2026-07-22.md  NEOBANX_COM_SITE_HANDOFF.md  POST_LAUNCH_CRYPTO_ACCOUNTING_SYSTEM.md  POST_LAUNCH_FOLLOWUP_BACKLOG.md  RECON_MASTER_INDEX.md  STRIPE_SETTLEMENT_RECON_2026-07-11.md  TAG_VOCABULARY.md  TONY_VALUE_EXCHANGE_ACCOUNTING_2026-07-20.md  VENDOR_PAYMENT_TONY_2026-07-20.md  landing-mockup-v2.html  stripe_pock_reconciliation_2026-07-11.csv
scripts/: apply_pock_migration.py  check_p0_status.py  deploy-vercel.sh  dev-local.sh  export_reference_fixtures.py  farm_anomaly_alert.py  freeze_morning_farm_2026-07-23.py  og_admin_code.py  rollout_p0.sh  run_farm_anomaly_alert.sh  seed_brok_faq_canon.mjs  seed_brok_medium_memory.py  seed_corp_float.py  setup_production.sh  test_pock_supabase.py
tests/: test_api_contract.py  test_brok_adjustments.py  test_calculate_api.py  test_health.py  (+8 more)
(+382 files in other folders)
