[project]
name = "brok-bioage-tool"
version = "0.2.0"
description = "Levine PhenoAge + BROK-adjusted biological age calculator"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["brok_bioage*", "api*"]